alignment fixed

--- a/src/components/AppLayout/appLayout.module.css
+++ b/src/components/AppLayout/appLayout.module.css
@@ -105,12 +105,13 @@
     width: 25rem;
     position: absolute;
     left: 0;
-    gap: 1rem;
+    gap: 0rem;
     overflow: hidden;
     padding-left: 1rem;
     transition: 0.5s;
     background-color: black;
     z-index: 6;
+    padding-bottom: 1rem;
   }
   .navbar p {
     text-align: left;
