--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -16,7 +16,7 @@
     color: #e2e8f0;
     display: flex;
     flex-direction: column;
-    width: 40rem;
+    width: 100%;
     align-items: center;
     padding:1rem;
     border-radius: 2rem;
@@ -164,5 +164,8 @@ h2{
         display: flex;
         flex-direction: column;
         gap: 1rem;
+    }
+    .header{
+        gap: .5rem;
     }
 }
